--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>baby weather app</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
+    <link rel="shortcut icon" href="#">
 </head>
 
 <body>
@@ -17,18 +18,18 @@
             <h2 id="city-name">City NAme</h2>
             <p>Current weather</p>
 
-            <p id="temperature">temperature</p>
-            <p>Feels Like temperature</p>
+            <p id="temperature"></p>
+            <p id="feels-like-temp">Feels Like temperature</p>
             <p>humidity</p>
 
-            <p>minimum temperature</p>
-            <p>maximum temperature</p>
+            <p id="min-temp"></p>
+            <p id="max-temp"></p>
 
             
         </header>
         <article>
-            <p>sunrise times</p>
-            <p>sunset times</p>
+            <p id="sunrise-time"></p>
+            <p id="sunset-time"></p>
 
         </article>
     </div>
