--- a/index.html
+++ b/index.html
@@ -11,67 +11,34 @@
 </head>
 
 <body>
-    <div class="container">
-        <section class='SECTION-APP'>
-            <header class="HEADER-APP" id="form--block">
-                <form onsubmit="setTimeout(function(){window.location.reload();},10);" method="post" name="form"
-                    id='form'>
-                    <label for="city-search"></label>
-                    <input type="text" name='city-search' id='city-search' placeholder="Search City">
-                    <button type="submit" name="submit" id='send' onclick="place()"><i
-                            class="fas fa-search"></i></button>
-                </form>
-            </header>
-            <article class="ARTICLE-APP" id="main-app--block">
-                <section class="SECTION-APP-MISC" id="current-time--block">
-                    <h3 id='current-month-day'></h3>
-                    <h3 id='current-time'></h3>
-                </section>
+    <header>
+        <form onsubmit="setTimeout(function(){window.location.reload();},10);" method="post" name="form" id='form'>
+            <label for="city-search"></label>
+            <input type="text" name='city-search' id='city-search' placeholder="Search City">
+            <button type="submit" name="submit" id='send' onclick="place()"></button>
+        </form>
+    </header>
 
-                <section class="SECTION-APP-MISC" id="weather-condition--block">
-                    <h3 id='weather-condition'></h3>
-                </section>
+    <main>
 
-                <section class="SECTION-APP-TEMP" id="temperature--block">
-                    <h1 id="temperature"></h1>
-                </section>
+        <p id='current-month-day'></p>
+        <p id='current-time'></p>
+        <p id='weather-condition'></p>
+        <p id="temperature"></p>
+        <p id="city-name"></p>
+        <p id="min-temp"></p>
+        <p id="max-temp"></p>
+        <p id="feels-like-temp"></p>
+        <p id='humidity'></p>
+        <p id="sunrise-time"></p>
+        <p id="sunset-time"></p>
+    </main>
 
-                <section class="SECTION-APP-CITY-NAME" id="city-name--block">
-                    <h2 id="city-name"></h2>
-                </section>
-
-                <section class="SECTION-APP-MISC" id="min-max-temp--block">
-                    <p id="min-temp"></p>
-                    <p id="max-temp"></p>
-                </section>
-
-                <section class="SECTION-APP-MISC" id="humid-feel--block">
-                    <section class="SECTION-APP--ELEMENT">
-                        <label for="feels-like-temp" class='label--element'>Feels like</label>
-                    <p id="feels-like-temp"></p>
-                    </section>
-
-                    <section class="SECTION-APP--ELEMENT">
-                        <label for="humidity" class='label--element'>Humidity</label>
-                        <p  id='humidity'></p>
-                    </section>
-                </section>
-
-                <section class="SECTION-APP-MISC" id="sun-time--block">
-                    <section class="SECTION-APP--ELEMENT">
-                        <label for="sunrise-time" class='label--element'>Sunrise Time</label>
-                        <p class='data--element' id="sunrise-time"></p>
-                    </section>
-
-                    <section class="SECTION-APP--ELEMENT">
-                        <label for="sunset-time" class='label--element'>Sunset Time</label>
-                        <p class='data--element' id="sunset-time"></p>
-                    </section>
-                </section>
-
-            </article>
+    <footer>
+        <section id="copyright">
+            <p>Copyright &copy; 2020 Mingos1</p>
         </section>
-    </div>
+    </footer>
 
     <script type="module" src="script.js" async defer></script>
 </body>
