--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
     <title>baby weather app</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="#">
 </head>
 
-<body class="container">
+<body>
+    
     <header>
         <header>
             <h1 class="title">
@@ -19,8 +20,8 @@
         </header>
         <form onsubmit="setTimeout(function(){window.location.reload();},10);" method="post" name="form" id='form'>
             <label for="city-search"></label>
-            <input type="text" name='city-search' id='city-search' placeholder="Search City">
-            <button type="submit" name="submit" id='send' onclick="place()"></button>
+            <input class="input" type="text" name='city-search' id='city-search' placeholder="Search City">
+            <button class="button is-primary" type="submit" name="submit" id='send' onclick="place()">Search</button>
         </form>
     </header>
 
@@ -37,6 +38,36 @@
         <p id="sunrise-time"></p>
         <p id="sunset-time"></p>
     </main>
+
+    <h1 class="title">
+        Bulma
+    </h1>
+
+    <p class="subtitle">
+        Modern CSS framework based on <a
+            href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Flexbox</a>
+    </p>
+
+    <div class="field">
+        <div class="control">
+            <input class="input" type="text" placeholder="Input">
+        </div>
+    </div>
+
+    <div class="field">
+        <p class="control">
+            <span class="select">
+                <select>
+                    <option>Select dropdown</option>
+                </select>
+            </span>
+        </p>
+    </div>
+
+    <div class="buttons">
+        <a class="button is-primary">Primary</a>
+        <a class="button is-link">Link</a>
+    </div>
 
     <footer>
 
