changed page style and added new font

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
             <h1 class="title">
                 Weather Application
             </h1>
+            <p class="subtitle"> Allows you to look up weather</p>
         </header>
         <form onsubmit="setTimeout(function(){window.location.reload();},10);" method="post" name="form" id='form'>
             <label for="city-search"></label>
@@ -39,36 +40,6 @@
         <p id="sunset-time"></p>
     </main>
 
-    <h1 class="title">
-        Bulma
-    </h1>
-
-    <p class="subtitle">
-        Modern CSS framework based on <a
-            href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox">Flexbox</a>
-    </p>
-
-    <div class="field">
-        <div class="control">
-            <input class="input" type="text" placeholder="Input">
-        </div>
-    </div>
-
-    <div class="field">
-        <p class="control">
-            <span class="select">
-                <select>
-                    <option>Select dropdown</option>
-                </select>
-            </span>
-        </p>
-    </div>
-
-    <div class="buttons">
-        <a class="button is-primary">Primary</a>
-        <a class="button is-link">Link</a>
-    </div>
-
     <footer>
 
         <section id="copyright">
@@ -76,7 +47,7 @@
         </section>
     </footer>
 
-    <script type="module" src="script.js" async defer></script>
+    <script type="module" src="script/script.js" async defer></script>
 </body>
 
 </html>
