formatted html doc

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather App</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="src/css/styles.css">
     <link rel="shortcut icon" href="#">
 </head>
 
@@ -30,18 +30,19 @@
     </header>
 
     <main class='main'>
+
         <header class='section-main-header'>
             <header class="section-header">
                 <h4 id='current-month-day'></h4>
                 <h4 id='current-time'></h4>
             </header>
 
-            <section class="section-card-temp">
+            <section class="section-main-temp">
                 <!-- weather condition should be an icon-->
                 <h3 id='weather-condition'></h3>
                 <h2 id="temperature"></h2>
             </section>
-            <section class="section-card-city-name">
+            <section class="section-main-city-name">
                 <h3 id="city-name"></h3>
             </header>
 
@@ -70,7 +71,7 @@
     </footer>
 </div>
 
-    <script type="module" src="script/script.js" async defer></script>
+    <script type="module" src="src/script/script.js" async defer></script>
 </body>
 
 </html>
