--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class='header'>
             <header class="header-header">
                 <h1 class="title">
-                    Weather Lookup
+                    Weather Lookup (Under Development)
                 </h1>
             </header>
             <form onsubmit="setTimeout(function(){window.location.reload();},10);" method="post" name="form" id='form'>
