Fixed a bunch of issues, should be functional

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <header class='header'>
             <header class="header-header">
                 <h1 class="title">
-                    Weather Lookup (Under Development)
+                    Weather Lookup
                 </h1>
             </header>
             <form onsubmit="setTimeout(function(){window.location.reload();},10);" method="post" name="form" id='form'>
                 <div class='input-wrapper'>
                     <label for="city-search"></label>
                     <input class="input" type="text" name='city-search' id='city-search' placeholder="Search City">
-                    <button class="button is-primary" type="button" name="submit" id='send' >Search</button>
+                    <button class="button is-primary" type="button" name="submit" id='send'>Search</button>
                 </div>
             </form>
         </header>
@@ -34,35 +34,38 @@
                 <header class="section-header">
                     <h4 id='current-month-day'></h4>
                     <h4 id='current-time'></h4>
+                    <h4 id='weather-condition'></h4>
                 </header>
 
                 <section class="section-main-temp">
                     <!-- weather condition should be an icon-->
-                    <h3 id='weather-condition'></h3>
+                 
                     <h2 id="temperature"></h2>
                 </section>
                 <section class="section-main-city-name">
                     <h3 id="city-name"></h3>
             </header>
-
+            <!--
             <section class='section-main' id="section-main">
-                <!--
                 <section class='section-card'>
                     <h4 id="min-temp"></h4>
                     <h4 id="max-temp"></h4>
                 </section>
+
                 <section class="section-card">
                     <h4 id="feels-like-temp"></h4>
                 </section>
-                -->
+                
                 <section class="section-card">
                     <h4 id='humidity'></h4>
                 </section>
+
                 <section class="section-card">
                     <h4 id="sunrise-time"></h4>
                     <h4 id="sunset-time"></h4>
                 </section>
             </section>
+        -->
         </main>
 
         <footer class='footer'>
