Switched script files for Edge

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class='wrapper'>
-
         <header class='header'>
             <header class="header-header">
                 <h1 class="title">
@@ -74,7 +73,7 @@
             </section>
         </footer>
     </div>
-    <script type='text/javascript' src='src/script/config.js'></script>
+    <!--<script type='text/javascript' src='src/script/config.js'></script>-->
     <script type="module" src="src/script/script.js" async defer></script>
 </body>
 
